# word-distance-game

./: .gitignore  README.md  VISUALIZATION_NOTES.md  index.html  package-lock.json  package.json  playtest-session.mjs  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vite.config.ts
docs/: DICTIONARY.md  EMBEDDINGS.md  SIMILARITY_MATH.md
playtest-reports/: playtest-1769642650800.md
scripts/: generate_embeddings.py  prepare_words.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: BullseyeVisualization.tsx  GuessInput.tsx  GuessList.tsx  Header.tsx  WinCelebration.tsx  index.ts
src/data/: words.json
src/hooks/: useGame.ts
src/types/: index.ts
src/utils/: gameLogic.ts  similarity.ts
tests/e2e/: game.spec.ts  screenshots.spec.ts
